setup/k8s/celery.yaml

# Deployment for Celery Worker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: otto
  labels:
    deployment: celery-worker
spec:
  replicas: 1  # Runs one instance of the worker
  selector:
    matchLabels:
      pod: celery-worker
  template:
    metadata:
      labels:
        pod: celery-worker
    spec:
      # The Celery worker and beat processes run as a non-root user (UID 1000)
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: celery-worker
          image: ${ACR_NAME}.azurecr.io/otto:latest  # Uses the latest image from Azure Container Registry
          command: ['celery', '-A', 'otto', 'worker', '-l', 'INFO', '--pool=gevent', '--concurrency=32']  # Starts Celery worker
          securityContext:
            allowPrivilegeEscalation: false  # Privilege escalation is disabled
            readOnlyRootFilesystem: true  # The root filesystem is read-only for added security
          volumeMounts:
            - name: secrets  # Mounts secrets from Azure Key Vault
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: media-pv-storage
              mountPath: "/data/media"  # Mounts shared storage for media
            - name: tmp
              mountPath: /tmp # A writable /tmp directory is provided for temporary files
      volumes:
      - name: secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-keyvault"
      - name: media-pv-storage
        persistentVolumeClaim:
          claimName: media-pvc  # References the PVC defined earlier
      - name: tmp
        emptyDir: {}

---


# Deployment for Celery Beat (scheduler)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: otto
  labels:
    deployment: celery-beat
spec:
  replicas: 1  # Runs one instance of the beat scheduler
  selector:
    matchLabels:
      pod: celery-beat
  template:
    metadata:
      labels:
        pod: celery-beat
    spec:
      # The Celery worker and beat processes run as a non-root user (UID 1000)
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: celery-beat
          image: ${ACR_NAME}.azurecr.io/otto:latest  # Uses the same image as the worker
          command: ['celery', '-A', 'otto', 'beat', '-l', 'INFO', '--scheduler', 'django_celery_beat.schedulers:DatabaseScheduler']  # Starts Celery beat scheduler
          securityContext:
            allowPrivilegeEscalation: false  # Privilege escalation is disabled
            readOnlyRootFilesystem: true  # The root filesystem is read-only for added security
          volumeMounts:
            - name: secrets
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: media-pv-storage
              mountPath: "/data/media"
            - name: tmp
              mountPath: /tmp  # Mounts the writable directory for the schedule file
      volumes:
      - name: secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-keyvault"  # Uses Azure Key Vault for secrets
      - name: media-pv-storage
        persistentVolumeClaim:
          claimName: media-pvc  # References the same PVC as the worker
      - name: tmp
        emptyDir: {}  # Provides a writable directory for the celerybeat-schedule file
